Update experiment run notebooks and papermill pipeline

--- a/notebooks/runs/semi_dataset_preparation_run.ipynb
+++ b/notebooks/runs/semi_dataset_preparation_run.ipynb
@@ -5,10 +5,10 @@
    "id": "3d25fe7f",
    "metadata": {
     "papermill": {
-     "duration": 0.004605,
-     "end_time": "2026-01-03T03:08:26.617560",
+     "duration": 0.001005,
+     "end_time": "2026-01-27T09:05:09.097994",
      "exception": false,
-     "start_time": "2026-01-03T03:08:26.612955",
+     "start_time": "2026-01-27T09:05:09.096989",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "0915c869",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:26.624403Z",
-     "iopub.status.busy": "2026-01-03T03:08:26.623962Z",
-     "iopub.status.idle": "2026-01-03T03:08:26.634369Z",
-     "shell.execute_reply": "2026-01-03T03:08:26.633207Z"
+     "iopub.execute_input": "2026-01-27T09:05:09.102068Z",
+     "iopub.status.busy": "2026-01-27T09:05:09.101009Z",
+     "iopub.status.idle": "2026-01-27T09:05:09.128103Z",
+     "shell.execute_reply": "2026-01-27T09:05:09.127111Z"
     },
     "papermill": {
-     "duration": 0.015164,
-     "end_time": "2026-01-03T03:08:26.635466",
+     "duration": 0.030767,
+     "end_time": "2026-01-27T09:05:09.129764",
      "exception": false,
-     "start_time": "2026-01-03T03:08:26.620302",
+     "start_time": "2026-01-27T09:05:09.098997",
      "status": "completed"
     },
     "tags": [
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6ef5ab4",
+   "id": "4f9e8bbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:26.639782Z",
-     "iopub.status.busy": "2026-01-03T03:08:26.639554Z",
-     "iopub.status.idle": "2026-01-03T03:08:26.642769Z",
-     "shell.execute_reply": "2026-01-03T03:08:26.641994Z"
+     "iopub.execute_input": "2026-01-27T09:05:09.133912Z",
+     "iopub.status.busy": "2026-01-27T09:05:09.132656Z",
+     "iopub.status.idle": "2026-01-27T09:05:09.145914Z",
+     "shell.execute_reply": "2026-01-27T09:05:09.145914Z"
     },
     "papermill": {
-     "duration": 0.006246,
-     "end_time": "2026-01-03T03:08:26.643494",
+     "duration": 0.016705,
+     "end_time": "2026-01-27T09:05:09.148052",
      "exception": false,
-     "start_time": "2026-01-03T03:08:26.637248",
+     "start_time": "2026-01-27T09:05:09.131347",
      "status": "completed"
     },
     "tags": [
@@ -89,16 +89,16 @@
    "id": "b1a1037c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:26.646844Z",
-     "iopub.status.busy": "2026-01-03T03:08:26.646673Z",
-     "iopub.status.idle": "2026-01-03T03:08:28.409260Z",
-     "shell.execute_reply": "2026-01-03T03:08:28.408781Z"
+     "iopub.execute_input": "2026-01-27T09:05:09.150047Z",
+     "iopub.status.busy": "2026-01-27T09:05:09.150047Z",
+     "iopub.status.idle": "2026-01-27T09:05:11.092901Z",
+     "shell.execute_reply": "2026-01-27T09:05:11.092208Z"
     },
     "papermill": {
-     "duration": 1.765169,
-     "end_time": "2026-01-03T03:08:28.409947",
+     "duration": 1.943857,
+     "end_time": "2026-01-27T09:05:11.092901",
      "exception": false,
-     "start_time": "2026-01-03T03:08:26.644778",
+     "start_time": "2026-01-27T09:05:09.149044",
      "status": "completed"
     },
     "tags": []
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: /Users/trangle/Python_workspace/air_guard/data/processed/dataset_for_semi.parquet\n",
+      "Saved: D:\\DataEngineer\\DataMining\\air_guard_mini_project\\data\\processed\\dataset_for_semi.parquet\n",
       "Rows: 420768\n",
       "Labeled ratio: 0.08671049129211347\n"
      ]
@@ -153,12 +153,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.9.25"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.830185,
-   "end_time": "2026-01-03T03:08:28.727955",
+   "duration": 3.642802,
+   "end_time": "2026-01-27T09:05:11.437284",
    "environment_variables": {},
    "exception": null,
    "input_path": "notebooks/semi_dataset_preparation.ipynb",
@@ -170,7 +170,7 @@
     "OUTPUT_SEMI_DATASET_PATH": "data/processed/dataset_for_semi.parquet",
     "RANDOM_STATE": 42
    },
-   "start_time": "2026-01-03T03:08:25.897770",
+   "start_time": "2026-01-27T09:05:07.794482",
    "version": "2.6.0"
   }
  },
