--- a/notebooks/runs/feature_preparation_run.ipynb
+++ b/notebooks/runs/feature_preparation_run.ipynb
@@ -5,10 +5,10 @@
    "id": "5a0efa0f",
    "metadata": {
     "papermill": {
-     "duration": 0.005599,
-     "end_time": "2026-01-03T03:08:29.524215",
+     "duration": 0.002008,
+     "end_time": "2026-01-27T09:05:12.727222",
      "exception": false,
-     "start_time": "2026-01-03T03:08:29.518616",
+     "start_time": "2026-01-27T09:05:12.725214",
      "status": "completed"
     },
     "tags": []
@@ -24,16 +24,16 @@
    "id": "fc714f69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:29.530998Z",
-     "iopub.status.busy": "2026-01-03T03:08:29.530760Z",
-     "iopub.status.idle": "2026-01-03T03:08:29.538475Z",
-     "shell.execute_reply": "2026-01-03T03:08:29.537604Z"
+     "iopub.execute_input": "2026-01-27T09:05:12.731446Z",
+     "iopub.status.busy": "2026-01-27T09:05:12.731446Z",
+     "iopub.status.idle": "2026-01-27T09:05:12.741098Z",
+     "shell.execute_reply": "2026-01-27T09:05:12.741098Z"
     },
     "papermill": {
-     "duration": 0.011904,
-     "end_time": "2026-01-03T03:08:29.539234",
+     "duration": 0.01417,
+     "end_time": "2026-01-27T09:05:12.743397",
      "exception": false,
-     "start_time": "2026-01-03T03:08:29.527330",
+     "start_time": "2026-01-27T09:05:12.729227",
      "status": "completed"
     },
     "tags": [
@@ -52,19 +52,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f38cf4e9",
+   "id": "0a8f1fcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:29.543425Z",
-     "iopub.status.busy": "2026-01-03T03:08:29.543235Z",
-     "iopub.status.idle": "2026-01-03T03:08:29.545768Z",
-     "shell.execute_reply": "2026-01-03T03:08:29.545208Z"
+     "iopub.execute_input": "2026-01-27T09:05:12.747424Z",
+     "iopub.status.busy": "2026-01-27T09:05:12.747424Z",
+     "iopub.status.idle": "2026-01-27T09:05:12.756232Z",
+     "shell.execute_reply": "2026-01-27T09:05:12.756232Z"
     },
     "papermill": {
-     "duration": 0.005656,
-     "end_time": "2026-01-03T03:08:29.546668",
+     "duration": 0.012876,
+     "end_time": "2026-01-27T09:05:12.758301",
      "exception": false,
-     "start_time": "2026-01-03T03:08:29.541012",
+     "start_time": "2026-01-27T09:05:12.745425",
      "status": "completed"
     },
     "tags": [
@@ -85,16 +85,16 @@
    "id": "bfdb78eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:29.550071Z",
-     "iopub.status.busy": "2026-01-03T03:08:29.549944Z",
-     "iopub.status.idle": "2026-01-03T03:08:30.062708Z",
-     "shell.execute_reply": "2026-01-03T03:08:30.062236Z"
+     "iopub.execute_input": "2026-01-27T09:05:12.761301Z",
+     "iopub.status.busy": "2026-01-27T09:05:12.761301Z",
+     "iopub.status.idle": "2026-01-27T09:05:13.465572Z",
+     "shell.execute_reply": "2026-01-27T09:05:13.465572Z"
     },
     "papermill": {
-     "duration": 0.515234,
-     "end_time": "2026-01-03T03:08:30.063308",
+     "duration": 0.706271,
+     "end_time": "2026-01-27T09:05:13.465572",
      "exception": false,
-     "start_time": "2026-01-03T03:08:29.548074",
+     "start_time": "2026-01-27T09:05:12.759301",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded: /Users/trangle/Python_workspace/data/processed/cleaned.parquet\n",
+      "loaded: D:\\DataEngineer\\DataMining\\data\\processed\\cleaned.parquet\n",
       "shape: (420768, 55)\n"
      ]
     },
@@ -329,16 +329,16 @@
    "id": "87032ab3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:30.065929Z",
-     "iopub.status.busy": "2026-01-03T03:08:30.065795Z",
-     "iopub.status.idle": "2026-01-03T03:08:30.185412Z",
-     "shell.execute_reply": "2026-01-03T03:08:30.185050Z"
+     "iopub.execute_input": "2026-01-27T09:05:13.465572Z",
+     "iopub.status.busy": "2026-01-27T09:05:13.465572Z",
+     "iopub.status.idle": "2026-01-27T09:05:13.589466Z",
+     "shell.execute_reply": "2026-01-27T09:05:13.588547Z"
     },
     "papermill": {
-     "duration": 0.121601,
-     "end_time": "2026-01-03T03:08:30.186022",
+     "duration": 0.123894,
+     "end_time": "2026-01-27T09:05:13.589466",
      "exception": false,
-     "start_time": "2026-01-03T03:08:30.064421",
+     "start_time": "2026-01-27T09:05:13.465572",
      "status": "completed"
     },
     "tags": []
@@ -370,16 +370,16 @@
    "id": "15ddfd7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:30.188665Z",
-     "iopub.status.busy": "2026-01-03T03:08:30.188569Z",
-     "iopub.status.idle": "2026-01-03T03:08:30.191553Z",
-     "shell.execute_reply": "2026-01-03T03:08:30.191092Z"
+     "iopub.execute_input": "2026-01-27T09:05:13.589466Z",
+     "iopub.status.busy": "2026-01-27T09:05:13.589466Z",
+     "iopub.status.idle": "2026-01-27T09:05:13.605084Z",
+     "shell.execute_reply": "2026-01-27T09:05:13.604133Z"
     },
     "papermill": {
-     "duration": 0.00489,
-     "end_time": "2026-01-03T03:08:30.192089",
+     "duration": 0.015618,
+     "end_time": "2026-01-27T09:05:13.605084",
      "exception": false,
-     "start_time": "2026-01-03T03:08:30.187199",
+     "start_time": "2026-01-27T09:05:13.589466",
      "status": "completed"
     },
     "tags": []
@@ -446,16 +446,16 @@
    "id": "3bd2ea99",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-03T03:08:30.194646Z",
-     "iopub.status.busy": "2026-01-03T03:08:30.194534Z",
-     "iopub.status.idle": "2026-01-03T03:08:30.476561Z",
-     "shell.execute_reply": "2026-01-03T03:08:30.476016Z"
+     "iopub.execute_input": "2026-01-27T09:05:13.611686Z",
+     "iopub.status.busy": "2026-01-27T09:05:13.605084Z",
+     "iopub.status.idle": "2026-01-27T09:05:14.283018Z",
+     "shell.execute_reply": "2026-01-27T09:05:14.283018Z"
     },
     "papermill": {
-     "duration": 0.284052,
-     "end_time": "2026-01-03T03:08:30.477079",
+     "duration": 0.677934,
+     "end_time": "2026-01-27T09:05:14.283018",
      "exception": false,
-     "start_time": "2026-01-03T03:08:30.193027",
+     "start_time": "2026-01-27T09:05:13.605084",
      "status": "completed"
     },
     "tags": []
@@ -465,7 +465,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: /Users/trangle/Python_workspace/data/processed/dataset_for_clf.parquet\n"
+      "Saved: D:\\DataEngineer\\DataMining\\data\\processed\\dataset_for_clf.parquet\n"
      ]
     }
    ],
@@ -486,12 +486,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.9.25"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.963152,
-   "end_time": "2026-01-03T03:08:30.694100",
+   "duration": 3.077203,
+   "end_time": "2026-01-27T09:05:14.514487",
    "environment_variables": {},
    "exception": null,
    "input_path": "notebooks/feature_preparation.ipynb",
@@ -501,7 +501,7 @@
     "DROP_ROWS_WITHOUT_TARGET": true,
     "OUTPUT_DATASET_PATH": "data/processed/dataset_for_clf.parquet"
    },
-   "start_time": "2026-01-03T03:08:28.730948",
+   "start_time": "2026-01-27T09:05:11.437284",
    "version": "2.6.0"
   },
   "title": "feature_preparation"
